[gd_scene load_steps=13 format=2]

[ext_resource path="res://dev/scripts/player.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://assets/img/transparent-arrow-icon-forward-icon-navigation-icon-5dc6519fdfe369.8915758515732781119171.png" type="Texture" id=3]
[ext_resource path="res://dev/scripts/arrow.gd" type="Script" id=4]
[ext_resource path="res://assets/img/right.png" type="Texture" id=5]
[ext_resource path="res://assets/img/left.png" type="Texture" id=6]
[ext_resource path="res://assets/img/up.png" type="Texture" id=7]
[ext_resource path="res://assets/img/down.png" type="Texture" id=8]
[ext_resource path="res://assets/img/enter.png" type="Texture" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 29, 30 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0392157, 0.0392157, 0.0392157, 0.52549 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.85098, 0.85098, 0.85098, 1 )

[node name="Player" type="KinematicBody2D" groups=["player"]]
script = ExtResource( 1 )

[node name="arrow" type="Sprite" parent="."]
position = Vector2( 76, 4 )
scale = Vector2( 0.0635838, 0.0601202 )
texture = ExtResource( 3 )
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = -916
limit_top = -432
limit_right = 4096
limit_bottom = 3199
editor_draw_limits = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1 )
shape = SubResource( 1 )

[node name="joystick" type="Control" parent="."]
margin_left = -554.0
margin_top = 157.0
margin_right = -166.0
margin_bottom = 327.0

[node name="Panel" type="Panel" parent="joystick"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -204.0
margin_top = -91.0
margin_right = 63.0
margin_bottom = 86.0
custom_styles/panel = SubResource( 2 )

[node name="up" type="TouchScreenButton" parent="joystick"]
position = Vector2( 79, 9 )
scale = Vector2( 0.1125, 0.114338 )
normal = ExtResource( 7 )

[node name="down" type="TouchScreenButton" parent="joystick"]
position = Vector2( 79, 89 )
scale = Vector2( 0.1125, 0.114338 )
normal = ExtResource( 8 )

[node name="left" type="TouchScreenButton" parent="joystick"]
position = Vector2( 6, 31 )
scale = Vector2( 0.127042, 0.143056 )
normal = ExtResource( 6 )

[node name="right" type="TouchScreenButton" parent="joystick"]
position = Vector2( 163, 37 )
scale = Vector2( 0.145191, 0.127778 )
normal = ExtResource( 5 )

[node name="actionBtn" type="Button" parent="joystick"]
margin_left = 260.0
margin_top = 85.0
margin_right = 334.0
margin_bottom = 158.0
custom_styles/normal = SubResource( 3 )
icon = ExtResource( 9 )
expand_icon = true

[connection signal="pressed" from="joystick/up" to="." method="_on_up_pressed"]
[connection signal="released" from="joystick/up" to="." method="_on_up_released"]
[connection signal="pressed" from="joystick/down" to="." method="_on_down_pressed"]
[connection signal="released" from="joystick/down" to="." method="_on_down_released"]
[connection signal="pressed" from="joystick/left" to="." method="_on_left_pressed"]
[connection signal="released" from="joystick/left" to="." method="_on_left_released"]
[connection signal="pressed" from="joystick/right" to="." method="_on_right_pressed"]
[connection signal="released" from="joystick/right" to="." method="_on_right_released"]
[connection signal="pressed" from="joystick/actionBtn" to="." method="_on_actionBtn_pressed"]
